--- a/gallery-web/public/index.css
+++ b/gallery-web/public/index.css
@@ -53,3 +53,88 @@ a{
 a:hover{
     color: rgb(103, 103, 255);
 }
+.error{
+    color: rgb(255, 71, 71);
+    font-weight: 500;
+}
+.font-size-10{
+    font-size: 10px !important;
+}
+.font-size-12{
+    font-size: 12px !important;
+}
+.font-size-14{
+    font-size: 14px !important;
+}
+.font-size-16{
+    font-size: 16px !important;
+}
+.font-size-18{
+    font-size: 18px !important;
+}
+.font-size-20{
+    font-size: 20px !important;
+}
+.font-size-22{
+    font-size: 22px !important;
+}
+.font-size-24{
+    font-size: 24px !important;
+}
+.font-size-26{
+    font-size: 26px !important;
+}
+.margin-left-5{
+    margin-left: 5px !important;
+}
+.margin-left-10{
+    margin-left: 10px !important;
+}
+.margin-left-15{
+    margin-left: 15px !important;
+}
+.margin-left-20{
+    margin-left: 20px !important;
+}
+.margin-right-5{
+    margin-right: 5px !important;
+}
+.margin-right-10{
+    margin-right: 10px !important;
+}
+.margin-right-15{
+    margin-right: 15px !important;
+}
+.margin-right-20{
+    margin-right: 20px !important;
+}
+.margin-top-5{
+    margin-top: 5px !important;
+}
+.margin-top-10{
+    margin-top: 10px !important;
+}
+.margin-top-15{
+    margin-top: 15px !important;
+}
+.margin-top-20{
+    margin-top: 20px !important;
+}
+.margin-bottom-5{
+    margin-bottom: 5px !important;
+}
+.margin-bottom-10{
+    margin-bottom: 10px !important;
+}
+.margin-bottom-15{
+    margin-bottom: 15px !important;
+}
+.margin-bottom-20{
+    margin-bottom: 20px !important;
+}
+.text-center{
+    text-align: center;
+}
+.color{
+    color: rgb(15, 15, 15);
+}
